--- a/src/AtomApp.form
+++ b/src/AtomApp.form
@@ -109,7 +109,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Расчитать"/>
+          <text value="Расcчитать"/>
         </properties>
       </component>
     </children>
