--- a/src/AtomApp.form
+++ b/src/AtomApp.form
@@ -232,7 +232,7 @@
               <grid row="12" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <selected value="true"/>
+              <selected value="false"/>
               <text value="Показывать диапазон интегрирования"/>
             </properties>
           </component>
