--- a/src/AtomApp.form
+++ b/src/AtomApp.form
@@ -45,16 +45,6 @@
           <text value="Угловая вероятность"/>
         </properties>
       </component>
-      <component id="a13ea" class="javax.swing.JSeparator">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="40"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font style="0"/>
-        </properties>
-      </component>
       <component id="7e23f" class="javax.swing.JLabel">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -91,6 +81,17 @@
           <text value="Открыть методические указания"/>
         </properties>
       </component>
+      <grid id="b1495" binding="pnlImg" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="350"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
