--- a/src/AtomApp.form
+++ b/src/AtomApp.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="pnlMain" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="20" right="10"/>
     <constraints>
-      <xy x="6" y="16" width="741" height="535"/>
+      <xy x="6" y="16" width="741" height="634"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -69,12 +69,12 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="40"/>
-            <preferred-size width="-1" height="40"/>
+            <maximum-size width="0" height="0"/>
           </grid>
         </constraints>
         <properties>
           <background color="-1"/>
-          <enabled value="true"/>
+          <enabled value="false"/>
           <font size="18"/>
           <foreground color="-12369085"/>
           <hideActionText value="false"/>
